--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,24 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-Tactile
+#minima,jekyll-theme-Tactile
+title: jixuduxing
+email: jixuduxing@gmail.com
+description: >- # this means to ignore newlines until "baseurl:"
+  踏遍青山人未老！
+
+show_downloads: true
+google_analytics: UA-126118635-1
+
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: jixuduxing
+github_username:  jixuduxing
+
+github:
+  zip_url: https://github.com/jixuduxing/jixuduxing.github.io/zipball/master
+  tar_url: https://github.com/jixuduxing/jixuduxing.github.io/tarball/master
+  another_url: another value
+
+# Build settings
+markdown: kramdown
+plugins:
+  - jekyll-feed
